# gnome-connect

./: gen-eclipse.sh
src/: CMakeLists.txt  device.cpp  device.h  generate  generate-openssl.cpp  generate.c  generate.cpp  gnome-connect  gnome-connect.c  gnome-connect.cpp  gnome-connect.h  hello.c  hello.cpp  json-message.c  json-message.h  network-listener.c  network-listener.h  network.c  network.h  notify.c  notify.cpp  notify.h
src/json/: CMakeLists.txt  factory.c  factory.cpp  factory.h  message.c  message.cpp  message.h  msg-identity.c  msg-identity.cpp  msg-identity.h  msg-pair.c  msg-pair.cpp  msg-pair.h  msg-payload.c  msg-payload.h
src/network/: CMakeLists.txt  network.c  network.h  tcp.c  tcp.cpp  tcp.h  udp.c  udp.cpp  udp.h
